--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -46,7 +47,8 @@
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.10",
     "sonner-native": "^0.19.1",
-    "supertokens-react-native": "^5.1.3"
+    "supertokens-react-native": "^5.1.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
