--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@backpackapp-io/react-native-toast": "^0.14.0",
     "@expo-google-fonts/plus-jakarta-sans": "^0.3.0",
     "@hugeicons/core-free-icons": "^1.0.14",
     "@hugeicons/react-native": "^1.0.7",
@@ -46,7 +47,6 @@
     "react-native-svg": "^15.11.2",
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.10",
-    "sonner-native": "^0.19.1",
     "supertokens-react-native": "^5.1.3",
     "zustand": "^5.0.5"
   },
