--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@expo-google-fonts/plus-jakarta-sans": "^0.3.0",
     "@hugeicons/core-free-icons": "^1.0.14",
     "@hugeicons/react-native": "^1.0.7",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/native": "^6.0.2",
     "@simform_solutions/react-native-audio-waveform": "^2.1.5",
     "axios": "^1.9.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "^5.1.8",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
@@ -36,16 +36,18 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "^6.7.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-expo-typescript-viewport-units": "^1.0.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-onesignal": "^5.2.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.2.0",
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.10",
     "supertokens-react-native": "^5.1.3",
