--- a/app.json
+++ b/app.json
@@ -4,22 +4,28 @@
     "slug": "vocapp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icons/android.png",
     "scheme": "vocapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.dishant.vocapp"
+      "bundleIdentifier": "com.dishant.vocapp",
+      "icon": {
+        "dark": "./assets/icons/ios-dark.png",
+        "light": "./assets/icons/ios-light.png",
+        "tinted": "./assets/icons/ios-tinted.png"
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/icons/android.png",
+        "monochromeImage": "./assets/icons/android.png",
         "backgroundColor": "#111111"
       },
       "edgeToEdgeEnabled": true,
       "package": "com.dishant.vocapp",
-      "versionCode": 8
+      "versionCode": 12
     },
     "web": {
       "bundler": "metro",
@@ -31,7 +37,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/icon.png",
+          "image": "./assets/icons/android.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#111111"
@@ -49,10 +55,10 @@
         {
           "mode": "development",
           "smallIcons": [
-            "./assets/images/icon.png"
+            "./assets/icons/android.png"
           ],
           "largeIcons": [
-            "./assets/images/icon.png"
+            "./assets/icons/android.png"
           ]
         }
       ]
