--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,7 @@
     "production": {
       "android": {
         "autoIncrement": "versionCode",
-        "buildType": "apk"
+        "buildType": "app-bundle"
       }
     }
   },
