--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.10",
     "supertokens-react-native": "^5.1.3",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "expo-build-properties": "~0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
