--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-web": "~0.19.10",
     "supertokens-react-native": "^5.1.3",
     "zustand": "^5.0.5",
-    "expo-build-properties": "~0.12.5"
+    "expo-build-properties": "~0.12.5",
+    "expo-navigation-bar": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
